Fixing overflow issue with writing links

--- a/resources/sass/writings.scss
+++ b/resources/sass/writings.scss
@@ -75,6 +75,8 @@
 
     .writing-link {
         margin-bottom: $wh-m-lg;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         .btn {
             text-align: left;
